# Multi-platform-screen-grabbing-utility

./: Cargo.toml  README.md  build.rs
src/: build.rs  main.rs  screenshot.rs  settings_manager.rs  utility.rs
src/add_window/: add_window.ui  imp.rs  mod.rs  screenshot.rs  ss.rs
src/crop_menu_bar/: imp.rs  mod.rs
src/css/: prova.css  style.css
src/edit_menu_bar/: imp.rs  mod.rs
src/edit_shortcut/: imp.rs  mod.rs
src/first_menu_bar/: first_menu_bar.ui  imp.rs  mod.rs
src/main_window/: imp.rs  main_window.ui  mod.rs
src/resources/: crop_menu_bar.ui  edit_menu_bar.ui  edit_shortcut.ui  first_menu_bar.ui  help_overlay.ui  main_window.ui  resources.gresource.xml  settings.ui  style.css
src/settings_modal/: imp.rs  mod.rs
