[package]
name = "multi_platform_screen_grabbing_utility"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.1"
dirs = "5.0.1"
gtk4 = "0.7.3"
screenshots = "0.8.4"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"

[build-dependencies]
glib-build-tools = "0.18"

[[bin]]
name = "main"
path = "src/main.rs"


